@@ -1,0 +1,46 @@
+
+#ifndef AFTENCODECWIDGET_H
+#define AFTENCODECWIDGET_H
+
+#include "../../core/codecwidget.h"
+
+class KComboBox;
+class QSlider;
+class QSpinBox;
+
+class AftenCodecWidget : public CodecWidget
+{
+    Q_OBJECT
+public:
+    AftenCodecWidget();
+    ~AftenCodecWidget();
+
+    ConversionOptions *currentConversionOptions();
+    bool setCurrentConversionOptions( ConversionOptions *_options );
+    void setCurrentFormat( const QString& format );
+    QString currentProfile();
+    bool setCurrentProfile( const QString& profile );
+    QDomDocument customProfile();
+    bool setCustomProfile( const QString& profile, const QDomDocument& document );
+    int currentDataRate();
+
+private:
+    KComboBox *cMode;
+    QSlider *sQuality;
+    QSpinBox *dQuality;
+
+    QString currentFormat; // holds the current output file format
+
+    int bitrateForQuality( int quality );
+    int qualityForBitrate( int bitrate );
+
+private slots:
+    void modeChanged( int mode );
+    void qualitySliderChanged( int quality );
+    void qualitySpinBoxChanged( int quality );
+
+signals:
+    void somethingChanged();
+};
+
+#endif // AFTENCODECWIDGET_H
