@@ -2,6 +2,7 @@
 -Add: Make it possible to use experimental codecs with ffmpeg
 -Add: Make it possible to use user defined arguments with ffmpeg
 -Add: Re-add aac/m4a encoding to the ffmpeg plugin
+(not completed yet)-Add: Aften plugin
 -Change: Query ffmpeg for supported codecs
 
 1.1.0:
